libnet-appliance-phrasebook-perl (1.5) UNRELEASED; urgency=low

  * Character class error for HP and Nortel, spotted by Marc Remijn 

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sun, 19 Oct 2008 00:28:12 +0100

libnet-appliance-phrasebook-perl (1.4) unstable; urgency=low

  * Switch to external YAML phrasebook file instead of a File::Temp and <DATA>

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sat, 23 Aug 2008 12:05:37 +0100

libnet-appliance-phrasebook-perl (1.3) unstable; urgency=low

  * Switch to a File::Temp instead of re-reading <DATA> 

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sun, 17 Aug 2008 18:08:36 +0100

libnet-appliance-phrasebook-perl (1.2) unstable; urgency=low

  * Added phrase for command line completion
  * Bumped version into the real world.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Tue, 03 Jun 2008 17:54:43 +0100

libnet-appliance-phrasebook-perl (0.1) unstable; urgency=low

  * Added 'disconnect' phrase for RT.cpan#35937

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sat, 17 May 2008 20:28:32 +0100

libnet-appliance-phrasebook-perl (0.09) unstable; urgency=low

  * Added Cisco CatOS commands contributed by Jörg Roth

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Thu, 01 May 2008 15:20:00 +0100

libnet-appliance-phrasebook-perl (0.08) unstable; urgency=low

  * Add more error strings

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Fri, 26 Jan 2007 14:58:00 +0000

libnet-appliance-phrasebook-perl (0.07) unstable; urgency=low

  * Added a load of new phrases that were previously hard-coded in
    Net::Appliance::Session
  * Added a 'Cisco' entry to the hierachy to carry these
  * Added a 'CATOS' dictionary, but it's untested and pretty basic
  * Hacked around a bug in Data::Phrasebook whereby a call to dicts() or
    keywords() would fail unless a fetch() had already been done. Now you
    can call keywords() immediately after instantiation
  * Updated tests to cope with changes to built-in dicts